--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
       integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
       crossorigin="anonymous"
     ></script>
-    <script src="js/burger-script.js"></script>
+    <script src="js/burgerscript.js"></script>
     <script src="script.js" defer></script>
   </body>
 </html>
