--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
         });
       });
     </script>
-    <script src="burgerscript.js"></script>
+    <script src="/burgerscript.js"></script>
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
       integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
