--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
           <img src="./assets/product/center.png" class="layer center lettuce" />
           <img src="./assets/product/plate.png" class="layer center tray" />
           <img src="./assets/product/bottom.png" class="layer bottom-bun" />
+          <img src="./assets/product/POPcorn.png" class="layer Popcorn" />
         </div>
         <div class="drink_section">
           <img src="./assets/product/drink.png" class="drink" />
@@ -451,7 +452,7 @@
         });
       });
     </script>
-    <script src="/burgerscript.js"></script>
+    <script src="js/burgerscript.js"></script>
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
       integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
